# whistleblower

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-diarization.txt  requirements.txt
chrome_audio/: README.md  background.js  manifest.json  offscreen.html  offscreen.js  options.html  options.js  popup.css  popup.html  popup.js
native_host/: install_native_host.sh  whistleblower_native_host.py  whistleblower_native_host.sh
output/diarization/: diarization.rttm  segments.json
output/diarization_sample_3m/: diarization.rttm  segments.json
output/diarization_sample_5m/: diarization.rttm  segments.json
output/session-20260114-224108/: speaker_transcript.md  summary.md  transcript.txt  transcript_segments.json
output/session-20260114-224108/diarization/: diarization.rttm  segments.json
scripts/: install.sh
whistleblower/: __init__.py  audio_capture.py  cli.py  diarize.py  merge_transcript.py  summarize.py  transcribe.py
whistleblower/prompts/: summarize_system.txt
